# Cataclysm-BN

./: .clang-format  .emmyrc.json  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Effects_Skill_Archery.html  Effects_Skill_Barter.html  Effects_Skill_Bashing.html  Effects_Skill_Carpentry.html  Effects_Skill_Computer.html  Effects_Skill_Cooking.html  Effects_Skill_Cutting.html  Effects_Skill_Dodge.html  Effects_Skill_Driving.html  Effects_Skill_Electronics.html  Effects_Skill_Fabrication.html  Effects_Skill_Firstaid.html  Effects_Skill_Gun.html  Effects_Skill_Launcher.html  Effects_Skill_Lockpick.html  Effects_Skill_Mechanics.html  Effects_Skill_Melee.html  Effects_Skill_Pistol.html  Effects_Skill_Rifle.html  Effects_Skill_Shotgun.html  Effects_Skill_Smg.html  Effects_Skill_Speech.html  Effects_Skill_Stabbing.html  Effects_Skill_Survival.html  Effects_Skill_Swimming.html  Effects_Skill_Tailor.html  Effects_Skill_Throw.html  Effects_Skill_Traps.html  Effects_Skill_Unarmed.html  Effects_Stat_Dexterity.html  Effects_Stat_Intelligence.html  Effects_Stat_Perception.html  Effects_Stat_Strength.html  (+5061 more)
.agents/skills/i18n-context/: SKILL.md
.claude/commands/: README.md  add-lua-binding-complex.md  lua-binding-reference.md
.github/: labeler.yml  pull_request_template.md  semantic.yml
.github/actions/update-pr-artifact-body/: action.yml
.github/workflows/: android.yml  autofix.yml  build-translations.yml  build.yml  clang-tidy.yml  experimental-release.yml  legacy-msvc.yml  manual-release.yml  matrix.yml  msvc-full-features-cmake.yml  osx.yml  platform-ci.yml  pr-artifact-publish.yml  pr-artifact-stale.yml  release.yml
CMakeModules/: FormatSource.cmake
CMakeModules/Find/: FindSDL3.cmake  FindSDL3_image.cmake  FindSDL3_mixer.cmake  FindSDL3_ttf.cmake
android/: .gitignore  build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
android/app/jni/: CMakeLists.txt
build-data/osx/: Cataclysm.sh
build-scripts/: MSVC.cmake  build.sh  gha_compile_only.sh  requirements.sh  windows-tiles-sounds-x64-msvc.cmake
data/json/: clothing_mods.json  construction_group.json  deconstruction.json  effects.json  enchantments.json  field_type.json  flags.json  harvest.json  item_actions.json  lua_traits.lua  main.lua  martialarts_fictional.json  materials.json  monster_factions.json  named_colors.json  preload.lua  professions.json  regional_map_settings.json  scenarios.json  slimepit.lua  sonar.lua  species.json  start_locations.json  techniques.json  vehicle_groups.json  vehicle_palette.json  vitamin.json  voltmeter.lua
data/json/construction/: construct_furn.json  construct_other.json
data/json/external_tileset/: External_Tileset_DP_Normal.json  External_Tileset_DP_Skin.json  External_Tileset_DP_Tall.json  External_Tileset_DP_dmd.json  armor.json  bike_parts.json  vehicle_parts.json
data/json/furniture_and_terrain/: furniture-plumbing.json  terrain-manufactured.json  terrain-mechanisms.json  terrain-walls.json
data/json/itemgroups/: books.json  collections_domestic.json  military.json  science_and_tech.json  supplies.json  vehicles_fuel_related.json
data/json/items/: ammo_types.json  chemicals_and_resources.json  fake.json  generic.json  tool_armor.json
data/json/mapgen/: animalshelter.json  bakery.json  boxing.json  dispensary.json  drive-in_theater.json  fire_station.json  gambling_hall.json  hazardous_waste_sarcophagus.json  headshop.json  homeless_shelter.json  hospital.json  irradiator_1.json  mansion_roof.json  megastore.json  mil_surplus.json  office_tower.json  pawn_shop.json  regional_airport.json  restaurant.json  school_1.json  sports_store.json
data/json/mapgen_palettes/: lab_modular_palette.json  mansion.json  mil_surplus.json  outlet_mall_palette.json
data/raw/: docgen_common.lua  generate_docs.lua  generate_types.lua
lang/: CMakeLists.txt  compile_mo.sh  discard_invalid_po.sh  update_stats.sh
msvc-full-features/: Cataclysm-lib-vcpkg-static.vcxproj  stdafx.h  vcpkg.json
scripts/: tileset.ts
search/: all_13.js  all_14.js  all_15.js  all_18.js  all_4.js  all_5.js  all_6.js  all_7.js  all_f.js  enumvalues_5.js
src/: CMakeLists.txt  action.cpp  action.h  active_item_cache.cpp  active_tile_data.cpp  active_tile_data.h  activity_actor.cpp  activity_actor_definitions.h  activity_handlers.cpp  activity_handlers.h  activity_item_handling.cpp  activity_speed.cpp  activity_speed.h  activity_speed_adapters.h  addiction.cpp  advanced_inv.cpp  advanced_inv_area.cpp  advanced_inv_area.h  advanced_inv_pane.cpp  animation.cpp  animation.h  armor_layers.cpp  auto_foraging.cpp  auto_foraging.h  auto_note.cpp  auto_pickup.cpp  avatar.cpp  avatar.h  avatar_action.cpp  avatar_action.h  avatar_functions.cpp  ballistics.cpp  ballistics.h  bionics.cpp  bionics_ui.cpp  cached_options.cpp  cached_options.h  cata_libintl.cpp  cata_libintl.h  cata_tiles.cpp  (+380 more)
src/lua/: CMakeLists.txt
src/sol/: CMakeLists.txt
src/utils/: url.cpp  url.h
tests/: CMakeLists.txt  active_item_cache_test.cpp  cata_libintl_test.cpp  catalua_test.cpp  coordinate_test.cpp  crafting_test.cpp  creature_in_field_test.cpp  data_vars.cpp  deployed_furniture_test.cpp  drop_token_test.cpp  electric_grid_test.cpp  explosion_balance_test.cpp  explosion_fling_damage_test.cpp  fatigue_test.cpp  filesystem_test.cpp  find_auto_consume_test.cpp  furniture_grab_test.cpp  graveyard_test.cpp  ground_destroy_test.cpp  input_test.cpp  invlet_test.cpp  iterator_safety_test.cpp  iuse_actor_test.cpp  loading_ui_test.cpp  magic_spell_effect_test.cpp  magic_spell_test.cpp  map_extra_test.cpp  map_helpers.cpp  map_helpers.h  map_memory_test.cpp  map_setup_helpers.h  map_test.cpp  melee_balance_test.cpp  melee_dodge_hit_test.cpp  melee_test.cpp  monster_faction_anger_test.cpp  monster_grab_balance_test.cpp  monster_test.cpp  monster_vision_test.cpp  mutation_test.cpp  (+48 more)
tests/data/save/broken_load_save/: #QnJva2VuU2F2ZQ==.sav
tests/lua/: typed_coords_projection_test.lua
tools/: run_iwyu.sh
tools/format/: CMakeLists.txt
tools/gfx_tools/: compose.py  decompose.py
(+348 files in other folders)
